small fixes here and there

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -3,7 +3,7 @@
 
 \input{tex/appendix_trf.tex}
 
-\chapter{Control plots}
+\chapter{Comparison between data and prediction}
 \label{app:selection}
 
 \input{tex/appendix_selection.tex}
