--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -570,11 +570,12 @@ Fig.~\ref{fig:taggeddatamc}. Events with at least 1 $b$--jet are
 eventually used to measure the asymmetry. A total of about 50000 and
 320000 \ttbar{} events is selected in the dataset at \seventev{} and
 \eighttev{}, respectively.
-The distributions in data of the lepton \pt{} and pseudo-rapidity, the
+The distributions in data of the lepton \pt{} and $\eta$, the
 leading\footnote{Jets are conventionally ordered in decreasing \pt{};
   hence the ``leading jet'' is the reconstructed jet with the highest
-  \pt{}.} jet \pt{} and pseudo-rapidity are in good
-agreement with the predictions.
+  \pt{}.} jet \pt{} and $\eta$ are in good agreement with the
+predictions. A more complete set of comparisons for background-- and
+signal--enriched samples is shown in App.~\ref{app:selection}.
 
 \begin{figure}\centering
   \subfloat[][]
