--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -558,7 +558,7 @@ at low \met{} values.
     Comparison between data and prediction in the pretag sample: the
     \mtw{} distribution in the \mujets{} channel at \seventev{}
     (left), and the \met{} distribution in the \ejets{} channel at
-    \eighttev{} (right)}
+    \eighttev{} (right). The normalization uncertainties are shown.}
   \label{fig:pretagdatamc}
 \end{figure}
 
@@ -574,7 +574,7 @@ The distributions in data of the lepton \pt{} and $\eta$, the
 leading\footnote{Jets are conventionally ordered in decreasing \pt{};
   hence the ``leading jet'' is the reconstructed jet with the highest
   \pt{}.} jet \pt{} and $\eta$ are in good agreement with the
-predictions. A more complete set of comparisons for background-- and
+predictions. A complete set of comparisons for background-- and
 signal--enriched samples is shown in App.~\ref{app:selection}.
 
 \begin{figure}\centering
@@ -652,9 +652,11 @@ comparing the simulated samples with scale factors varied within their
 uncertainties.
 
 In the \ejets{} channel, the overall effects on predicted yields are 0.3\%, 1.1\% 
-and 0.2\%, respectively for electron reconstruction, identification
-and trigger efficiency uncertainties.
-In the \mujets{} channel, the effects are 0.2\%, 1.1\% and 1.4\%,
+and 0.2\% at \seventev{} and 0.3\%, 2.4\% and 0.7\% at \eighttev{},
+respectively for electron reconstruction, identification and trigger
+efficiency uncertainties.
+In the \mujets{} channel, the effects are 0.2\%, 1.1\% and 1.4\% at
+\seventev{} and 0.4\%, 0.5\% and 1.8\% at \eighttev{},
 respectively for muon reconstruction, identification and trigger
 efficiency uncertainties.
 
@@ -692,13 +694,16 @@ shown in Fig.~\ref{fig:lepscalesyst}.
 
 The efficiency of the JVF requirement (Sec.~\ref{sec:jets}) is
 calibrated in simulation using scale factors derived in $Z(\to
-\ell^+\ell^-)$+1-jet events. The scale factor for pileup jets efficiency is
-constant and $\sim1$, while the hard--scatter jets efficiency is
-scaled up by a variable amount between $\approx3\%$ for jets with
-$\pt{}=25\GeV{}$ and down to $1\%$ for jets with $\pt{}>150\GeV{}$
-
-The uncertainties on the scale factors applied is propagated to the
-predicted event yields with effects of $\sim2.5\%$.
+\ell^+\ell^-)$+1-jet events. In the analysis at \seventev{}, the scale
+factor for pileup jets efficiency is constant and $\sim1$, while the
+hard--scatter jets efficiency is scaled up by a variable amount
+between $\approx3\%$ for jets with $\pt{}=25\GeV{}$ and down to $1\%$
+for jets with $\pt{}>150\GeV{}$. The uncertainties on the scale
+factors is propagated to the predicted event yields with effects of
+$\sim2.5\%$. In the analysis at \eighttev{}, the systematic
+uncertainty is estimated by varying the requirement within the
+efficiency range corresponding to the discrepancy between data and
+simulation. The overall effect on event yields is of about 2.5\%.
 
 \subsubsection{Jet energy scale}
 \label{sec:syst_jes}
@@ -755,8 +760,11 @@ for each flavor~\cite{btagging,ctagging,ltagging}.
 In simulation $b$ ($c$) jet efficiencies are calibrated with
 \pt{} and $\eta$--dependent scale factors in the range 0.9--1.0 (1.1--1.2), the
 scale factor for light tagging efficiency is $\sim$1.3.
-The uncertainty on these scale factors is  between 7\% and 13\% for
-$b$ jets, between 15\% and 39\% for $c$ jets, and $\sim$25\% for light jets.
+The uncertainty on the scale factors for the analysis at \seventev{}
+are  between 7\% and 13\% for $b$ jets, between 15\% and 39\% for $c$
+jets, and $\sim$25\% for light jets. At \eighttev{} the precision is
+improved with uncertainties below 3\% for $b$-- and $c$--jet scale
+factors and of about 5\% for light jets.
 
 The systematic uncertainty on flavor tagging efficiency is divided
 into six independent components corresponding to the \pt{} bins used for
