--- a/tex/selection_plots.tex
+++ b/tex/selection_plots.tex
@@ -6,14 +6,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/Jet1_Eta}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/WMt}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/MET}
-  \caption[Control plots for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$.]{Control plots for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$. From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta{}$ are shown for the
+  \caption{Combarison between data and prediction for the \mujets{} channel in the pretag
+    sample at $\sqrt{s} = 7 \TeV{}$. From the top left to the bottom
+    right, \pt{}, and $\eta{}$ distributions are shown for the
     muon (top) and for the leading jet (middle).  The distributions
     for the W transverse mass \mtw{} and the missing transverse
     momentum \met{} are shown in the bottom row. 
-    Uncertainty on background normalization is shown.}
+    The uncertainties on background normalization are shown.}
   \label{fig:2011mu_pretag}
 \end{figure}
 %
@@ -25,13 +24,13 @@
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/Jet1_Eta}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/WMt}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/MET}
-\caption[Control plots for the \mujets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$]{Control plots for the \mujets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom right, the transverse
-  momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+\caption{Comparison between data and prediction for the \mujets{} channel in the tagged
+  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
+  right, \pt{}, and $\eta$ distributions are shown for the
   muon (top) and for the leading jet (middle). The bottom plots show
   the W transverse mass \mtw{} and the missing transverse
-  momentum \met{}. Uncertainty on background normalization is shown.}
+  momentum \met{}. The uncertainties on background normalization are
+  shown.}
 \label{fig:2011mu_tagged}
 \end{figure}
 %
@@ -43,13 +42,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/Jet1_Eta}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/WMt}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/MET}
-  \caption[Control plots for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$]{Control plots for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \ejets{} channel in the pretag
+    sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
+    right, \pt{} and $\eta$ distributions are shown for the
     electron (top) and for the leading jet (middle). The bottom plots
     show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. Uncertainty on background normalization is shown.}
+    momentum \met{}. The uncertainties on background normalization are
+    shown.} 
   \label{fig:2011ele_pretag}
 \end{figure}
 %                                      
@@ -61,13 +60,12 @@
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/Jet1_Eta}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/WMt}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/MET}
-\caption[Control plots for the \ejets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$]{Control plots for the \ejets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom right, the transverse
-  momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+\caption{Comparison between data and prediction for the \ejets{} channel in the tagged
+  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
+  right, \pt{} and $\eta$ distributions are shown for the
   electron (top) and for the leading jet (middle). The bottom plots
   show the W transverse mass \mtw{} and the missing transverse
-  momentum \met{}. Uncertainty on background normalization is shown.}
+  momentum \met{}. The uncertainties on background normalization are shown.}
 \label{fig:2011ele_tagged}
 \end{figure}
 
@@ -81,14 +79,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/met}
-  \caption[Control plots for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \mujets{} channel in the pretag
+    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom
+    right, \pt{} and $\eta$ distributions are shown for the
     muon (top) and for the leading jet (middle).  The distributions
     for the W transverse mass \mtw{} and the missing transverse
     momentum \met{} are shown in the bottom row. 
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012mu_pretag}
 \end{figure}
@@ -101,14 +98,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/met}
-  \caption[Control plots for the \mujets{} channel in the 0-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \mujets{} channel in the 0-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \mujets{}
+    channel in the 0 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$.  From
+    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
     muon (top) and for the leading jet (middle). The bottom plots show
     the W transverse mass \mtw{} and the missing transverse
     momentum \met{}. 
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012mu_0tag}
 \end{figure}
@@ -121,14 +117,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/met}
-  \caption[Control plots for the \mujets{} channel in the 1-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \mujets{} channel in the 1-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \mujets{}
+    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
+    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
     muon (top) and for the leading jet (middle). The bottom plots show
     the W transverse mass \mtw{} and the missing transverse
     momentum \met{}. 
-    %   Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012mu_1tag}
 \end{figure}
@@ -141,14 +136,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/met}
-  \caption[Control plots for the \mujets{} channel in the 2-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \mujets{} channel in the 2-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \mujets{}
+    channel in the 2 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$.  From
+    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
     muon (top) and for the leading jet (middle). The bottom plots show
     the W transverse mass \mtw{} and the missing transverse
     momentum \met{}. 
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012mu_2tag}
 \end{figure}
@@ -161,14 +155,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/met}
-  \caption[Control plots for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \ejets{} channel in the pretag
+    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom
+    right, \pt{} and $\eta$ distributions are shown for the
     electron (top) and for the leading jet (middle). The bottom plots
     show the W transverse mass \mtw{} and the missing transverse
     momentum \met{}. 
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012ele_pretag}
 \end{figure}
@@ -181,14 +174,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/met}
-  \caption[Control plots for the \ejets{} channel in the 0-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \ejets{} channel in the 0-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \ejets{}
+    channel in the 0 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
+    the top left to the bottom right, \pt{}, and $\eta$ distributions are shown for the
     electron (top) and for the leading jet (middle). The bottom plots
     show the W transverse mass \mtw{} and the missing transverse
     momentum \met{}.
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012ele_0tag}
 \end{figure}
@@ -201,14 +193,13 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/met}
-  \caption[Control plots for the \ejets{} channel in the 1-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \ejets{} channel in the 1-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \ejets{}
+    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
+    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
     electron (top) and for the leading jet (middle). The bottom plots
     show the W transverse mass \mtw{} and the missing transverse
     momentum \met{}.
-    %    Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012ele_1tag}
 \end{figure}
@@ -221,14 +212,14 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/met}
-  \caption[Control plots for the \ejets{} channel in the 2-tag
-    sample at $\sqrt{s} = 8 \TeV{}$]{Control plots for the \ejets{} channel in the 2-tag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right, the transverse
-    momentum \pt{}, and the pseudorapidity $\eta$ are shown for the
+  \caption{Comparison between data and prediction for the \ejets{}
+    channel in the 2 $b$--jets
+    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right,
+   \pt{} and $\eta$ distributions are shown for the
     electron (top) and for the leading jet (middle). The bottom plots
     show the W transverse mass \mtw{} and the missing transverse
     momentum \met{}. 
-    %   Uncertainty on background normalization is shown.
+    The uncertainties on background normalization are shown.
   }
   \label{fig:2012ele_2tag}
 \end{figure}
